--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:56:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:57:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ body {
 +2 thru 8</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -374,8 +374,8 @@ E thru 6</td>
 +1 thru 17</td>
       <td>Shane Lowry E
 -1 thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -422,10 +422,10 @@ Missed Cut</td>
 E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -438,8 +438,8 @@ E (F)</td>
 E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -470,10 +470,10 @@ E (F)</td>
 -1 thru 9</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -486,8 +486,8 @@ E (F)</td>
 +3 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -600,8 +600,8 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -646,10 +646,10 @@ E thru 6</td>
 +3 (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -744,8 +744,8 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -774,10 +774,10 @@ E (F)</td>
 E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -790,8 +790,8 @@ E (F)</td>
 -2 thru 7</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -808,8 +808,8 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -828,22 +828,6 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -2
-+1 thru 6</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -1
@@ -854,8 +838,8 @@ E (F)</td>
 +1 thru 17</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -868,28 +852,12 @@ E (F)</td>
 +3 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -2
-+1 thru 6</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth(W) +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -908,18 +876,18 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Philip Dale</td>
       <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
+      <td>Scottie Scheffler -2
++1 thru 6</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
-      <td>Jordan Spieth +4
+      <td>Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -956,6 +924,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">6</td>
+      <td>Scottie Scheffler -2
++1 thru 6</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 17</td>
+      <td class="greyout">Jordan Spieth(W) +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">7</td>
       <td>Will Zalatoris -1
@@ -966,10 +950,26 @@ E (F)</td>
 E (F)</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Brooks Koepka +5
++2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -982,10 +982,10 @@ E (F)</td>
 -2 thru 7</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1030,58 +1030,26 @@ E (F)</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Scottie Scheffler -2
 +1 thru 6</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td>Jordan Spieth +4
+      <td>Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 thru 17</td>
-      <td>Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 thru 17</td>
-      <td>Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1094,6 +1062,38 @@ E (F)</td>
 +4 thru 17</td>
       <td>Brooks Koepka +5
 +2 thru 17</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Viktor Hovland +4
++4 thru 17</td>
+      <td>Brooks Koepka +5
++2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Viktor Hovland +4
++4 thru 17</td>
+      <td>Jordan Spieth +6
++4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
