--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:56:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:57:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,22 +204,6 @@ E thru 6</td>
 +4 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 6</td>
-      <td>Cameron Smith -2
-+2 thru 8</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -3
@@ -246,10 +230,26 @@ E (F)</td>
 -1 thru 9</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 6</td>
+      <td>Cameron Smith -2
++2 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -278,10 +278,10 @@ E thru 6</td>
 +3 (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -296,8 +296,8 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -342,8 +342,8 @@ Missed Cut</td>
 -2 thru 7</td>
       <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -356,28 +356,12 @@ Missed Cut</td>
 +3 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout">Brooks Koepka +5
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Jordan Spieth +4
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td class="greyout">Jordan Spieth(W) +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -393,7 +377,23 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Luke List +7
-+2 thru 10</td>
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
   </tbody>
 </table>
