--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:57:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:58:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -215,7 +215,7 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
 +5 (F)</td>
     </tr>
@@ -233,7 +233,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -268,6 +268,22 @@ E (F)</td>
 -2 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Scottie Scheffler -2
++1 thru 6</td>
+      <td>Adam Scott E
+-2 thru 7</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +5
++2 thru 17</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
@@ -297,7 +313,7 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -311,7 +327,7 @@ E (F)</td>
       <td>Tyrrell Hatton +2
 +2 (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
     </tr>
@@ -327,7 +343,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 17</td>
     </tr>
@@ -396,22 +412,6 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Scottie Scheffler -2
-+1 thru 6</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Adam Scott +1
--1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +5
-+2 thru 17</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
@@ -455,7 +455,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
 +5 (F)</td>
     </tr>
@@ -503,7 +503,7 @@ Out With Injury</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
     </tr>
@@ -583,7 +583,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -615,7 +615,7 @@ E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 17</td>
     </tr>
@@ -631,7 +631,7 @@ E (F)</td>
       <td>Brian Harman +4
 +2 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Sam Burns +5
 +2 (F)</td>
     </tr>
@@ -697,7 +697,7 @@ E (F)</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
 +4 thru 7</td>
       <td class="greyout">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -727,7 +727,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -743,7 +743,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -789,7 +789,7 @@ E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -807,7 +807,7 @@ E (F)</td>
       <td>Bubba Watson +2
 +1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -853,7 +853,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Jordan Spieth(W) +6
@@ -871,7 +871,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -903,7 +903,7 @@ E (F)</td>
       <td>Tiger Woods +3
 +4 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
@@ -917,7 +917,7 @@ E (F)</td>
       <td>Rory McIlroy +2
 +1 thru 17</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Xander Schauffele +7
@@ -949,7 +949,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 (F)</td>
       <td class="greyout">Jordan Spieth +6
@@ -981,7 +981,7 @@ E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Jordan Spieth +6
@@ -1029,7 +1029,7 @@ E (F)</td>
       <td>Patrick Reed +3
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
-+4 thru 17</td>
++4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Jordan Spieth +6
@@ -1043,7 +1043,7 @@ E (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td>Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -1059,7 +1059,7 @@ E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td>Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele +7
@@ -1075,7 +1075,7 @@ Missed Cut</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td>Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -1091,7 +1091,7 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
-+4 thru 17</td>
++4 (F)</td>
       <td>Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
