--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:59:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:59:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -2
-+1 thru 6</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+E thru 7</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau -1
@@ -172,6 +172,22 @@ E (F)</td>
 +2 thru 17</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -3
+E thru 7</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Shane Lowry E
+-1 thru 9</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Collin Morikawa -1
@@ -193,7 +209,7 @@ E thru 6</td>
       <td>Cameron Smith -2
 +2 thru 8</td>
       <td>Joaquin Niemann -2
-+1 thru 7</td>
++1 thru 8</td>
       <td>Tommy Fleetwood(W) E
 -3 thru 9</td>
       <td>Justin Thomas +2
@@ -202,6 +218,22 @@ E thru 6</td>
 +1 thru 17</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -3
+E thru 7</td>
+      <td>Cameron Smith -2
++2 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -218,38 +250,6 @@ E thru 6</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 6</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 6</td>
-      <td>Cameron Smith -2
-+2 thru 8</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
